# ArchitectureIS

./: README.md
doc/: Robot.cpp  avtomat  avtomat.txt  backlog.xlsx  classDiagram  classDiagram.txt  codeDiagram.txt  codeDiograme.txt  conceptual  sequenceDiagram  sequenceDiagram.txt  usecase
doc/Robot/: Dockerfile  Robot.cpp
doc/avtomat/: Dockerfile
src/: CMakeLists.txt  Dockerfile  MergeRobot.cpp
src/RobotCode/: Enum.h  RobotFiles.cpp
src/RobotCode/cmake/: CMakeLists.txt
src/client - server/: Client.cpp  Server.cpp
src/client - server/client/: ClientRobot.cpp
src/client - server/server/: Classes.cpp  Classes.h  RobotFiles.cpp  Server.cpp  Server.h
src/cmake/: CMakeLists.txt
